--- Auto-Git Commit ---

--- a/05-conditions.yml
+++ b/05-conditions.yml
@@ -3,7 +3,7 @@
   vars: 
     OS: centos
   tasks:
-    - name: centOS
+    - name: CentOS
       degug:
         msg: CentOS
       when: OS == "centos"
