--- a/05-conditions.yml
+++ b/05-conditions.yml
@@ -3,6 +3,7 @@
   vars: 
     OS: centos
     NUM: 7
+    
   tasks:
     - name: centos 
       debug:
@@ -20,4 +21,4 @@
       debug:
         msg: Num Con 1
       when: NUM <= 5
-    
+    - name: 
