--- Auto-Git Commit ---

--- a/05-conditions.yml
+++ b/05-conditions.yml
@@ -21,7 +21,7 @@
       debug:
         msg: Num Con 1
       when: NUM <= 5
-    - name: If bool1 is true
+    - name: If Bool1 is true
       debug:
         msg: bool1 is true
       when: BOOL1
