--- a/05-conditions.yml
+++ b/05-conditions.yml
@@ -30,4 +30,4 @@
     - name: Multiple Statements, AND
       debug: 
         msg: AND Statement
-      when: NUM >= 5
+      when: NUM >= 5 and BOOL1 
