--- a/05-conditions.yml
+++ b/05-conditions.yml
@@ -29,5 +29,5 @@
 
     - name: Multiple Statements, AND
       debug: 
-        msg: 
+        msg: Either or Statement
       when: NUM >= 5 and BOOL1 | bool
