--- a/05-conditions.yml
+++ b/05-conditions.yml
@@ -30,4 +30,6 @@
     - name: Multiple Statements, AND
       debug: 
         msg: Either or Statement
-      when: NUM >= 5 and BOOL1 | bool
+      when: NUM >= 5 or BOOL1 | bool
+
+    
