--- a/05-conditions.yml
+++ b/05-conditions.yml
@@ -32,6 +32,7 @@
         msg: Either or Statement
       when: NUM >= 5 or BOOL1 | bool
 
-    - name: Multiple Stsatements, 
+    - name: Multiple Stsatements, AND
+      
 
     
