--- Auto-Git Commit ---

--- a/05-conditions.yml
+++ b/05-conditions.yml
@@ -33,6 +33,8 @@
       when: NUM >= 5 or BOOL1 | bool
 
     - name: Multiple Stsatements, AND
-      
+      debug:
+        msg:
+        
 
     
