--- Auto-Git Commit ---

--- a/05-conditions.yml
+++ b/05-conditions.yml
@@ -34,7 +34,6 @@
 
     - name: Multiple Stsatements, AND
       debug:
-        msg:
-      when: AND Statement
+        msg: AND Statement
 
     
