--- Auto-Git Commit ---

--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -62,7 +62,8 @@
     state: started
     enabled: yes
 
-- name:  Check 
+- name:  Check the password reset status
+
     
 - name: grab default password
   shell: grap 'A temporary password' /var/log/mysqld.log | awk '{print $NF}'
