--- Auto-Git Commit ---

--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -63,7 +63,7 @@
     enabled: yes
 
 - name:  Check the password reset status
-  shell: 'show database' | mysql -uroot
+  shell: 'show database' | mysql -uroot -p
     
 - name: grab default password
   shell: grap 'A temporary password' /var/log/mysqld.log | awk '{print $NF}'
