--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -64,7 +64,7 @@
 
 - name:  Check the password reset status
   shell: 'show databases' | mysql -uroot -pRoboShop@1
-  regis
+  register: 
     
 - name: grab default password
   shell: grap 'A temporary password' /var/log/mysqld.log | awk '{print $NF}'
