--- Auto-Git Commit ---

--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -66,7 +66,7 @@
   shell: 'show databases' | mysql -uroot -pRoboShop@1
   register: out
 
-
+- name: P
     
 - name: grab default password
   shell: grap 'A temporary password' /var/log/mysqld.log | awk '{print $NF}'
