--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -62,8 +62,8 @@
     state: started
     enabled: yes
 
-- name:  Check the password reset status
-  shell: 'show databases' |  -uroot -pRoboShop@1
+- name: Check the Password reset status
+  shell: echo 'show databases' | mysql -uroot -pRoboShop@1
   register: out
 
 - name: Print
