--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -70,6 +70,7 @@
 - name: grab default password
   shell: grap 'A temporary password' /var/log/mysqld.log | awk '{print $NF}'
   register: default_pass
+  when: 
 
 - name: Reset SQL file
   copy: 
