--- Auto-Git Commit ---

--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -80,5 +80,5 @@
 
 - name: reset MySQL Password
   shell: mysql --connect-expired-password -u root -p"${DEFAULT_PASSWORD}" </tmp/reset.sql
-  
+  when: out.rc != 0
    
