--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -63,7 +63,7 @@
     enabled: yes
 
 - name: Check the password reset status
-  shell: 'show databases | mysql -uroot -pRoboShop@1
+  shell: echo 'show databases' | mysql -uroot -pRoboShop@1
   register: out
    
 - name: grab default password
