--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -21,6 +21,11 @@
     state: started
     enabled: yes
 
+- name: Check the Password reset status
+  shell: echo 'show databases' | mysql -uroot -pRoboShop@1
+  register: out
+  ignore_errors: yes
+
 - name: Grab default Password
   shell: grep 'A temporary password' /var/log/mysqld.log | awk '{print $NF}'
   register: default_pass
