--- Auto-Git Commit ---

--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -21,7 +21,7 @@
     state: started
     enabled: yes
 
-- name: Check the Password eset status
+- name: Check the Password Reset status
   shell: echo 'show databases' | mysql -uroot -pRoboShop@1
   register: out
   ignore_errors: yes
