--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -41,5 +41,26 @@
   shell: mysql --connect-expired-password -u root -p"{{default_pass.stdout}}" </tmp/reset.sql
   when: out.rc != 0
 
-  
+- name: Check Password Validate Plugin
+  shell: echo 'show plugins;' | mysql -u root -p"RoboShop@1" 2>/dev/null | grep -i validate_password
+  register: val_out
+  ignore_errors: yes
+
+- name: Uninstall Password Validate Plugin
+  shell: echo "uninstall plugin validate_password;" >/tmp/pass.sql ; mysql -u root -p"RoboShop@1" </tmp/pass.sql
+  when: val_out.rc == 0
+
+- name: Download MySQL Schema
+  ansible.builtin.unarchive:
+    src: "https://github.com/roboshop-devops-project/mysql/archive/main.zip"
+    dest: /tmp
+    remote_src: yes
+
+- name: Load Schema
+  mysql_db:
+    state: import
+    name: all
+    target: /tmp/mysql-main/shipping.sql
+    login_password: RoboShop@1
+    login_user: root
    
