--- Auto-Git Commit ---

--- a/roles/common/tasks/download.yml
+++ b/roles/common/tasks/download.yml
@@ -1,2 +1,2 @@
-- name: Include GitHub Do
-include_tasks: "{{ hostvar }}.yaml"
+- name: Include GitHub Download
+  include_tasks: "{{ hostvar }}.yaml"
