--- a/roles/common/tasks/java.yml
+++ b/roles/common/tasks/java.yml
@@ -10,6 +10,6 @@
   shell: mvn clean package ; mv target/shipping-1.0.jar shipping.jar
   args:
     chdir:/home/roboshop/{{COMPONENT}}
-
+d.yml
 - name: systemD
-  include_tasks: sys
+  include_tasks: system
