--- a/roles/common/tasks/java.yml
+++ b/roles/common/tasks/java.yml
@@ -5,11 +5,27 @@
 
 - name: download
   include_tasks: download.yml
-  
+
 - name: Make Maven package
   shell: mvn clean package ; mv target/shipping-1.0.jar shipping.jar
   args:
     chdir: /home/roboshop/{{COMPONENT}}}
 
 - name: SystemD
+  include_tasks: systemd.yml
+
+- name: Install Maven Package
+  yum:
+    name: maven
+    state: present
+
+- name:  Download
+  include_tasks: download.yml
+
+- name: Make Maven package
+  shell: mvn clean package ; mv target/shipping-1.0.jar shipping.jar
+  args:
+    chdir: /home/roboshop/{{COMPONENT}}
+
+- name:  SystemD
   include_tasks: systemd.yml
