--- a/roles/common/tasks/download-from-github.yml
+++ b/roles/common/tasks/download-from-github.yml
@@ -1,6 +1,6 @@
-- name: Create Roboshop App User
+- name: Create RoboShop App User
   user:
-   name: roboshop
+    name: roboshop
 
 - name: Download {{COMPONENT}} App Archive
   ansible.builtin.unarchive:
@@ -16,7 +16,7 @@
 - name: Copy Extracted Content to {{COMPONENT}} Path
   ansible.builtin.copy:
     src: /tmp/{{COMPONENT}}-main/
-    dest: /home/roboshop/{{COMPONENT}}
+    dest: /home/roboshop/{{COMPONENT}}/
     remote_src: yes
     owner: roboshop
     group: roboshop
