--- Auto-Git Commit ---

--- a/roles/rabbitmq/tasks/main.yml
+++ b/roles/rabbitmq/tasks/main.yml
@@ -2,4 +2,4 @@
   yum: 
     name: https://github.com/rabbitmq/erlang-rpm/releases/download/v23.2.6/erlang-23.2.6-1.el7.x86_64.rpm -y
 
-- name: Set
+- name: Setup YUM reo
