--- Auto-Git Commit ---

--- a/roles/rabbitmq/tasks/main.yml
+++ b/roles/rabbitmq/tasks/main.yml
@@ -16,7 +16,7 @@
     state: started
     enabled: yes
 
-- name: community.rabbitmq.rabbitmq_user:
+- name: Create Robocommunity.rabbitmq.rabbitmq_user:
     user: joe
     password: changeme
     vhost: /
