--- Auto-Git Commit ---

--- a/roles/rabbitmq/tasks/main.yml
+++ b/roles/rabbitmq/tasks/main.yml
@@ -12,7 +12,7 @@
 
 - name: StartRabbitMQ Server
   systemd:
-    name: rabbitmq-serer
+    name: rabbitmq-server
     state: started
     enabled: yes
 
