--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -1,7 +1,7 @@
-- name: Install NodeJS
+- name: Install python
   yum:
     name: 
-      - nodejs
+      - 
       - make 
       - gcc-c++
     state: present
