--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -11,7 +11,7 @@
 
 - name: Install python Dependencies
   pip: 
-    re
+    requirements: /my_app
 
 - name: SystemD
   include_tasks: systemd.yml
