--- a/roles/common/tasks/download-from-github.yml
+++ b/roles/common/tasks/download-from-github.yml
@@ -1,7 +1,7 @@
 - name: Create RoboShop App User
   user:
-    name: roboshop
-  register: 
+    name: roboshoR
+  register: ROBOSHOP_USEE
 
 - name: Download {{COMPONENT}} App Archive
   ansible.builtin.unarchive:
