--- a/roles/common/tasks/download-from-github.yml
+++ b/roles/common/tasks/download-from-github.yml
@@ -1,7 +1,7 @@
 - name: Create RoboShop App User
   user:
-    name: roboshoR
-  register: ROBOSHOP_USEE
+    name: robosho
+  register: ROBOSHOP_USER
 
 - name: Download {{COMPONENT}} App Archive
   ansible.builtin.unarchive:
