--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -14,5 +14,5 @@
     requirements: /home/roboshop/{{COMPONENT}}/requirements.txt
     executable: pip3
 
-- name: SystemD
+#- name: SystemD
   include_tasks: systemd.yml
