--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -14,6 +14,8 @@
     requirements: /home/roboshop/{{COMPONENT}}/requirements.txt
     executable: pip3
 
-- name: Print 
+- name: Print User details
+  debug:
+    msg: 
 #- name: SystemD
 #include_tasks: systemd.yml
