--- a/roles/common/tasks/download-from-github.yml
+++ b/roles/common/tasks/download-from-github.yml
@@ -1,19 +1,15 @@
 - name: Create RoboShop App User
   user:
-    name: robosho
-  register: ROBOSHOP_USER
-
+    name: roboshop
 - name: Download {{COMPONENT}} App Archive
   ansible.builtin.unarchive:
     src: "https://github.com/roboshop-devops-project/{{COMPONENT}}/archive/main.zip"
     dest: /tmp
     remote_src: yes
-
 - name: Remove old content
   ansible.builtin.file:
     path: /home/roboshop/{{COMPONENT}}
     state: absent
-
 - name: Copy Extracted Content to {{COMPONENT}} Path
   ansible.builtin.copy:
     src: /tmp/{{COMPONENT}}-main/
