--- Auto-Git Commit ---

--- a/roles/common/tasks/download-from-github.yml
+++ b/roles/common/tasks/download-from-github.yml
@@ -1,6 +1,6 @@
 - name: Create RoboShop App User
   user:
-    name: robosho
+    name: roboshop
   register: ROBOSHOP_USER
 
 - name: Download {{COMPONENT}} App Archive
