--- a/roles/common/tasks/download-from-github.yml
+++ b/roles/common/tasks/download-from-github.yml
@@ -3,7 +3,7 @@
     name: roboshop
   register: ROBOSHOP_USER
 
-- name: Download {{COMPONENT}} App Archive
+- name: Download 
   ansible.builtin.unarchive:
     src: "https://github.com/roboshop-devops-project/{{COMPONENT}}/archive/main.zip"
     dest: /tmp
