--- Auto-Git Commit ---

--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -19,6 +19,7 @@
     msg: "{{ROBOSHOP_USER}}"
 
 - name: Replace User ID
-  ansible.
+  ansible.builtin.lineinfile:
+  
 #- name: SystemD
 #include_tasks: systemd.yml
