--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -20,6 +20,6 @@
 
 - name: Replace User ID
   ansible.builtin.lineinfile:
-    path: /hom
+    path: /home/roboshop/{{}}
 #- name: SystemD
 #include_tasks: systemd.yml
