--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -21,6 +21,6 @@
 - name: Replace User ID
   ansible.builtin.lineinfile:
     path: /home/roboshop/{{COMPONENT}}/{{COMPONENT}}.ini
-    regexp: 
+    regexp: ''
     #- name: SystemD
 #include_tasks: systemd.yml
