--- Auto-Git Commit ---

--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -22,6 +22,6 @@
   ansible.builtin.lineinfile:
     path: /home/roboshop/{{COMPONENT}}/{{COMPONENT}}.ini
     regexp: '^uid'
-    
+    line: 
     #- name: SystemD
 #include_tasks: systemd.yml
