--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -22,6 +22,6 @@
   ansible.builtin.lineinfile:
     path: /home/roboshop/{{COMPONENT}}/{{COMPONENT}}.ini
     regexp: '^uid'
-    line: uid = {{}}
+    line: uid = {{ROBOSHOP_USER}}
     #- name: SystemD
 #include_tasks: systemd.yml
