--- Auto-Git Commit ---

--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -27,7 +27,7 @@
 - name: Replace User ID
   ansible.builtin.lineinfile:
     path: /home/roboshop/{{COMPONENT}}/{{COMPONENT}}.ini
-    regexp: '^uid'
+    regexp: '^gid'
     line: uid = {{ROBOSHOP_USER.uid}}
     #- name: SystemD
 #include_tasks: systemd.yml
