--- a/06-loops.yml
+++ b/06-loops.yml
@@ -1,9 +1,9 @@
-- name: loops
+- name: Loops
   hosts: localhost
   tasks: 
     name: print
     debug:
       msg:  Helo, {{item}}
     loop: 
-      - jhon
+      - Jhon
       - ram
