--- a/06-loops.yml
+++ b/06-loops.yml
@@ -9,4 +9,4 @@
         - Ram
     - name: Print Loop from Map
       debug:
-        msg: Hello {{item.name}}, Welcome to {{}}
+        msg: Hello {{item.name}}, Welcome to {{item.course}}
