--- Auto-Git Commit ---

--- a/06-loops.yml
+++ b/06-loops.yml
@@ -10,4 +10,5 @@
     - name: Print Loop from Map
       debug:
         msg: Hello {{item.name}}, Welcome to {{item.course}} traning
-    
+      loop:
+         
