--- Auto-Git Commit ---

--- a/06-loops.yml
+++ b/06-loops.yml
@@ -11,4 +11,5 @@
       debug:
         msg: Hello {{item.name}}, Welcome to {{item.course}} traning
       loop:
-        - {{ name: Jhon, course:  }}
+        - {{ name: Jhon, course: AWS }}
+        
