--- Auto-Git Commit ---

--- a/06-loops.yml
+++ b/06-loops.yml
@@ -12,4 +12,4 @@
         msg: Hello {{item.name}}, Welcome to {{item.course}} traning
       loop:
         - {{ name: Jhon, course: AWS }}
-        
+        - {{ name:  }}
