--- Auto-Git Commit ---

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -32,7 +32,7 @@
     idempotent: yes
   loop:
     - catalogue
-    - 
+    - users
 
 - name: Load Scheme - Users
   community.mongodb.mongodb_shell:
