--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -26,7 +26,7 @@
     dest: /tmp
     remote_src: yes
 
-- name: Load Schema - Catalogue
+- name: Load Schema 
   community.mongodb.mongodb_shell:
     file: "/tmp/mongodb-main/catalogue.js"
     idempotent: yes
@@ -34,8 +34,5 @@
     - catalogue
     - users
 
-- name: Load Scheme - Users
-  community.mongodb.mongodb_shell:
-    file: "/tmp/mongodb-main/users.js"
-    idempotent: yes
+
 
