--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -28,7 +28,7 @@
 
 - name: Load Schema 
   community.mongodb.mongodb_shell:
-    file: "/tmp/mongodb-main/catalogue.js"
+    file: "/tmp/mongodb-main/{{ite}}.js"
     idempotent: yes
   loop:
     - catalogue
