--- Auto-Git Commit ---

--- a/08-filters.yml
+++ b/08-filters.yml
@@ -2,4 +2,7 @@
   hosts: localhost
   vars: 
     URL: https://get.jenkins.io/war-stable/2.303.1/jenkins.war
-  
+  tasks:
+    - name: Print file(last value) of a URL
+      debug:
+        msg: FILE = {{URL | split("/") | last }}
