--- Auto-Git Commit ---

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -24,12 +24,7 @@
   copy: 
     src: roboshop.conf
     dest: /etc/nginx/default.d/roboshop.conf
-     
-- name: Restart Nginx
-  systemd:
-    name: nginx
-    state: restarted
-    enabled: yes notify: Restart Nginx
+     notify: Restart Nginx
 
 - name: Start Nginx
   systemd:
