--- a/roles/common/tasks/node_exporter.yml
+++ b/roles/common/tasks/node_exporter.yml
@@ -1,3 +1,3 @@
 - name: Download Prometheus
   unarchive:  
-    src: "https://github.com/prometheus/node_exporter/releases/download/v{{}}/node_exporter-{{}}.linux-amd64.tar.gz"
+    src: "https://github.com/prometheus/node_exporter/releases/download/v{{NE_VERSION}}/node_exporter-{{NE_VERSION}}.linux-amd64.tar.gz"
