--- Auto-Git Commit ---

--- a/roles/common/tasks/node_exporter.yml
+++ b/roles/common/tasks/node_exporter.yml
@@ -1,4 +1,4 @@
 - name: Download Prometheus
   unarchive:  
     src: "https://github.com/prometheus/node_exporter/releases/download/v1.2.2/node_exporter-1.2.2.linux-amd64.tar.gz"
-    dest: /opt/node_exportr
+    dest: /opt/node_exportr.yml
