--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -14,5 +14,5 @@
     path: /home/roboshop/{{COMPONENT}}
   become_user: roboshop
 
-- name: SystemD
-  include_tasks: systemd.yml
+- name: Node Exporter
+  include_tasks: node-exporter.yml
