--- a/roles/common/tasks/node-exporter.yml
+++ b/roles/common/tasks/node-exporter.yml
@@ -2,3 +2,4 @@
   unarchive:  
     src: "https://github.com/prometheus/node_exporter/releases/download/v1.3.1/node_exporter-1.3.1.linux-amd64.tar.gz"
     dest: /opt/node_exporter
+    remote_src: yes
