--- Auto-Git Commit ---

--- a/roles/common/tasks/node-exporter.yml
+++ b/roles/common/tasks/node-exporter.yml
@@ -1,6 +1,7 @@
 - name: Create Node Exporter
   file:
-    name: /opt/node_
+    name: /opt/node_exporter
+    
 
 - name: Download Node Exporter
   unarchive:  
