--- a/roles/common/tasks/node-exporter.yml
+++ b/roles/common/tasks/node-exporter.yml
@@ -1,7 +1,7 @@
 - name: Create Node Exporter
   file:
     name: /opt/node_exporter
-    state: 
+    state: directory
 
 - name: Download Node Exporter
   unarchive:  
