--- a/roles/common/tasks/node-exporter.yml
+++ b/roles/common/tasks/node-exporter.yml
@@ -4,4 +4,4 @@
     dest: /opt/node_exporter
     remote_src: yes 
 
-- name: Create link of Prometheus with standard 
+- name: Create link of Prometheus with standard directory name
