--- Auto-Git Commit ---

--- a/roles/common/tasks/node-exporter.yml
+++ b/roles/common/tasks/node-exporter.yml
@@ -5,4 +5,5 @@
     remote_src: yes 
 
 - name: Create link of Prometheus with standard directory name
-  ansible.builtin.file
+  ansible.builtin.file:
+    src:
