--- a/roles/common/tasks/node-exporter.yml
+++ b/roles/common/tasks/node-exporter.yml
@@ -6,4 +6,5 @@
 
 - name: Create link of Prometheus with standard directory name
   ansible.builtin.file:
-    src:/opt/
+    src:/opt/node_exporter-1.3.1.linux
+    dest: 
