--- Auto-Git Commit ---

--- a/roles/common/tasks/node-exporter.yml
+++ b/roles/common/tasks/node-exporter.yml
@@ -7,4 +7,5 @@
 - name: Create link of Prometheus with standard directory name
   ansible.builtin.file:
     src: /opt/node_exporter-1.3.1.linux
-    dest: /opt/node
+    dest: /opt/node_exporter
+    
