--- Auto-Git Commit ---

--- a/roles/common/tasks/node-exporter.yml
+++ b/roles/common/tasks/node-exporter.yml
@@ -1,23 +1,23 @@
-- name: Download Node Exporter
-  unarchive:  
+- name: Donwload Node Exporter
+  unarchive:
     src: "https://github.com/prometheus/node_exporter/releases/download/v{{NE_VERSION}}/node_exporter-{{NE_VERSION}}.linux-amd64.tar.gz"
-    dest: /opt/node_exporter
-    remote_src: yes 
+    dest: /opt
+    remote_src: yes
 
-- name: Create link of Prometheus with standard directory name
+- name: Create link of prometheus with standard directory name
   ansible.builtin.file:
-    src: /opt/node_exporter-{{NE_VERSION}}.linux
+    src: /opt/node_exporter-{{NE_VERSION}}.linux-amd64
     dest: /opt/node_exporter
     state: link
 
-- name: Copy systemD file
+- name: Copy SystemD file
   copy:
     src: node_exporter.service
     dest: /etc/systemd/system/node_exporter.service
-     
+
 - name: Start Node exporter
   systemd:
     name: node_exporter
     state: restarted
-    enabled: yes 
+    enabled: yes
     daemon_reload: yes
