--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -28,7 +28,7 @@ scrape_configs:
     static_configs:
       - targets: ["localhost:9090"]
   - job_name: "ec2-nodes"
-    ec2
+    ec2_sd_configs:
     static_configs:
       - targets:
           - "172.31.87.10:9100"
