--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -30,7 +30,7 @@ scrape_configs:
   - job_name: "ec2-nodes"
     ec2_sd_configs:
       - region: us-east-1
-        
+        access
     static_configs:
       - targets:
           - "172.31.87.10:9100"
