--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -32,7 +32,7 @@ scrape_configs:
       - region: us-east-1
         access_key: a
         secret_key: b
-        
+        port: 9100
     static_configs:
       - targets:
           - "172.31.87.10:9100"
