--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -30,7 +30,7 @@ scrape_configs:
   - job_name: "ec2-nodes"
     ec2_sd_configs:
       - region: us-east-1
-        access_key: a
+        access_key: 
         secret_key: b
         port: 9100
     static_configs:
