--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -30,8 +30,8 @@ scrape_configs:
   - job_name: "ec2-nodes"
     ec2_sd_configs:
       - region: us-east-1
-        access_key: {{ACCESS}}
-        secret_key: b
+        access_key: {{ACCESS_KEY}}
+        secret_key: {{SE}}
         port: 9100
     static_configs:
       - targets:
