--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -33,7 +33,8 @@ scrape_configs:
         access_key: {{ACCESS_KEY}}
         secret_key: {{SECRET_KEY}}
         port: 9100
-        
+        filters:
+          - 
     static_configs:
       - targets:
           - "172.31.87.10:9100"
