--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -35,7 +35,7 @@ scrape_configs:
         port: 9100
         filters:
           - name: "tag:name"
-            values: ["frontend", "cart", "catalague", ]
+            values: ["frontend", "cart", "catalague", "shi"]
     static_configs:
       - targets:
           - "172.31.87.10:9100"
