--- Auto-Git Commit ---

--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -33,9 +33,9 @@ scrape_configs:
         access_key: {{ACCESS_KEY}}
         secret_key: {{SECRET_KEY}}
         port: 9100
-        filters:
+          filters:
           - name: "tag:Name"
-            values: ["frontend", "cart", "catalague", "user", "shipping", "payment"]
+            values: ["frontend", "cart", "catalogue", "user", "shipping", "payment"]
     static_configs:
       - targets:
           - "172.31.87.10:9100"
