--- a/roles/common/tasks/node-exporter.yml
+++ b/roles/common/tasks/node-exporter.yml
@@ -6,7 +6,7 @@
 
 - name: Create link of prometheus with standard directory name
   ansible.builtin.file:
-    src: /opt/node_exporter-{{NE}}.linux-amd64
+    src: /opt/node_exporter-{{NE_VERSION}}.linux-amd64
     dest: /opt/node_exporter
     state: link
 
