--- a/roles/common/tasks/node-exporter.yml
+++ b/roles/common/tasks/node-exporter.yml
@@ -1,6 +1,6 @@
 - name: Donwload Node Exporter
   unarchive:
-    src: "https://github.com/prometheus/node_exporter/releases/download/v{{1.3.1}}}/node_exporter-{{1.3.1}}.linux-amd64.tar.gz"
+    src: "https://github.com/prometheus/node_exporter/releases/download/v{{NE_VERSION}}}/node_exporter-{{1.3.1}}.linux-amd64.tar.gz"
     dest: /opt
     remote_src: yes
 
