--- a/roles/common/tasks/node-exporter.yml
+++ b/roles/common/tasks/node-exporter.yml
@@ -1,4 +1,4 @@
-- name: Donwload Node Exporter
+- name: Doload Node Exporter
   unarchive:
     src: "https://github.com/prometheus/node_exporter/releases/download/v{{NE_VERSION}}}/node_exporter-{{NE_VERSION}}.linux-amd64.tar.gz"
     dest: /opt
