--- Auto-Git Commit ---

--- a/roles/common/tasks/node-exporter.yml
+++ b/roles/common/tasks/node-exporter.yml
@@ -12,7 +12,7 @@
 
 - name: Copy SystemD file
   copy:
-    src: node_exporter.service
+    src: node-exporter.service
     dest: /etc/systemd/system/node_exporter.service
 
 - name: Start Node exporter
