--- Auto-Git Commit ---

--- a/roles/common/tasks/node-exporter.yml
+++ b/roles/common/tasks/node-exporter.yml
@@ -12,8 +12,8 @@
 
 - name: Copy SystemD file
   copy:
-    src: node-exporter.service
-    dest: /etc/systemd/system/node-exporter.service
+    src: node_exporter.service
+    dest: /etc/systemd/system/node_exporter.service
 
 - name: Start Node exporter
   systemd:
