--- Auto-Git Commit ---

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -32,7 +32,7 @@
     state: started
     enabled: yes
 
-- name: Include Node_exporter
+- name: Include node_exporter
   include_role:
     name: common
     tasks_from: node-exporter
