--- Auto-Git Commit ---

--- a/roles/common/tasks/node-exporter.yml
+++ b/roles/common/tasks/node-exporter.yml
@@ -7,7 +7,7 @@
 - name: Create link of prometheus with standard directory name
   ansible.builtin.file:
     src: /opt/node_exporter-{{NE_VERSION}}.linux-amd64
-    dest: /opt
+    dest: /opt/
     state: link
 
 - name: Copy SystemD file
