--- a/roles/common/tasks/node-exporter.yml
+++ b/roles/common/tasks/node-exporter.yml
@@ -4,7 +4,7 @@
     dest: /opt
     remote_src: yes
 
-- name: Create link of Prometheus
+- name: Create link of Prometheus with standard 
 
 - name: Copy SystemD file
   copy:
