--- a/roles/common/tasks/node-exporter.yml
+++ b/roles/common/tasks/node-exporter.yml
@@ -5,7 +5,8 @@
     remote_src: yes
 
 - name: Create link of Prometheus with standard directory name
-  ansible.builtin.file
+  ansible.builtin.file:
+  
 
 - name: Copy SystemD file
   copy:
