--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -1,16 +1,16 @@
-- name: Install python
+- name: Install Python
   yum:
-    name: 
+    name:
       - python36
-      - gcc 
+      - gcc
       - python3-devel
     state: present
 
-- name: Download
+- name:  Download
   include_tasks: download.yml
 
-- name: Install python Dependencies
-  pip: 
+- name: Install Python Dependencies
+  pip:
     requirements: /home/roboshop/{{COMPONENT}}/requirements.txt
     executable: pip3
 
@@ -29,9 +29,11 @@
     path: /home/roboshop/{{COMPONENT}}/{{COMPONENT}}.ini
     regexp: '^gid'
     line: gid = {{ROBOSHOP_USER.group}}
-  
+
 - name:  SystemD
   include_tasks: systemd.yml
 
 - name: Node Exporter
   include_tasks: node-exporter.yml
+
+
