--- Auto-Git Commit ---

--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -42,4 +42,5 @@ scrape_configs:
 
     relable_configs:
       - source_lables:
-          -'_meta_ec2_tag_name'
+          -'_meta_ec2_tag_Name
+          '
