--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -42,5 +42,5 @@ scrape_configs:
 
     relable_configs:
       - source_lables:
-          -'_meta_ec2_tag_Name
-          '
+          -'_meta_ec2_tag_Name'
+          
