--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -35,7 +35,12 @@ scrape_configs:
         port: 9100
         filters:
           - name: "tag:Name"
-            values: ["frontend", "cart", "catalogue", "user", "shipping", "payment"] 
+            values: ["frontend", "cart", "catalogue", "user", "shipping", "payment"]
+
+    relabel_configs:
+      - source_labels:
+          - '__meta_ec2_tag_Name'
+        target_label:  'tagName'
     static_configs:
       - targets:
           - "172.31.87.10:9100"
